# sleepmask-clion

./: .gitignore  README.md
BOF-Template/: CMakeLists.txt  sleepmask.cpp
BOF-Template/assembly/: ExecNtApi.asm  SetNtApiAddr.asm
BOF-Template/base/: mock.cpp  mock_syscalls.cpp
BOF-Template/include/: beacon.h  beacon_gate.h  debug.h  exec_ntapi.h  mock.h  set_ntapi.h  sleepmask-vs.h  sleepmask.h
